<resources>
    <string name="app_name">Abms Studies</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_chats">Chats</string>
    <string name="bottom_menu_sell">Sell</string>
    <string name="bottom_menu_myAds">My Ads</string>
    <string name="bottom_menu_account">Account</string>
    <string name="sell_Fab_description">Sell btn</string>
    <string name="Scroll_view_LogIn">LogIN Scroll</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_guest">Continue with Guest</string>
    <string name="not_have_account">Not have Account? <b>Register</b></string>
    <string name="already_have_account">Already have Account <b>LogIn</b></string>
    <string name="register_btn">Register</string>
    <string name="default_web_client_id">815260149117-u55fqt3v3o4llrua74jjf0vqd3sa6e11.apps.googleusercontent.com</string>
    <string name="did_t_receive_otp_resend">Did\'t Receive OTP? <b>Resend</b></string>
    <string name="back_btn">back_Btn</string>
    <string name="forget_password">Forgot Password?<b>Recover</b></string>
    <string name="submit_btn">Forgot submit btn</string>
    <string name="image_btn">Image button</string>
    <string name="price_symbol">Rs</string>
    <string name="ad_favourite_btn">Ad favourite Button</string>
    <string name="myName">Muhammad Aban<b>(Group Leader)</b></string>
    <string name="mission_thisApp_text">The purpose of this App is to provide students an easy access Books, Past Papers, Math Video Lectures.Providing students a platform to sell and purchase books.A collaborative chat System platform to discuss their thoughts and Matters.Notice Board for Instant notices.</string>
    <string name="about_thisApp_text">This App is developed by <b>Abms Group</b>.As final Year Project To facilitate the Students of CTTI.If you have any suggestions, questions or Issues regarding this App.You can Contact Us</string>
    <string name="linkedin">Linkedin</string>
    <string name="resume">Resume</string>
    <string name="git_hub">Git Hub</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="update_ad">Update Ad</string>
    <string name="create_ad">Create Ad</string>
    <string name="post_ad">Post Ad</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to %1$s</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="my_ads">My Ads</string>
    <string name="account">Account</string>
    <string name="categoryAct">categoryAct</string>
    <string name="deleteBtn">Delete</string>
    <string name="favBtn">Favourite Btn</string>
    <string name="add_paper_btn">Add Paper Btn</string>
    <string name="close_btn">Close Btn</string>
    <string name="logout_btn">Logout Btn</string>
    <string name="add_Fab_Btn">Add Fab</string>
    <string name="viewPager">View Pager</string>
    <string name="tab_Layout">Tab Layout</string>
    <string name="download_Btn">Download Btn</string>
    <string name="pdf_upload_Btn">Pdf Upload Btn</string>
    <string name="addCommentBtn">Add Comment Btn</string>
    <string name="more_Btn">More Btn</string>
    <string name="contact">Thank you for considering Abms Studies. If you have any questions please don not hesitate to get in touch with us.</string>
    <string name="my_google_map_api_key">AIzaSyA1Dc-f4vIPvewKUkRMHXWj30kBNO3ATIw</string>
    <string name="gimni_api_key">AIzaSyBmupJEwQoFtb9xtQOJXhM064h5n7x2-S0</string>
</resources>