<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="8dp">

    <!-- App Name/Logo -->
    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:tintMode="src_in" />

    <ImageButton
        android:id="@+id/ToolbarBackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_black"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:contentDescription="@string/back_btn"/>


    <!-- Email Input -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        android:layout_below="@+id/logoIv"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="16dp"
        app:cardCornerRadius="12dp"
        android:backgroundTint="#FFFEFE">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

    <TextView
        android:id="@+id/LogInLabelTv"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Create Your Account"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LogInLabelTv"
            android:id="@+id/nameTil"
            style="@style/CustomTextInputLayout"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black"
            android:hint="Enter Name"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_person_black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/nameEt"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTil"
            android:id="@+id/emailTil"
            style="@style/CustomTextInputLayout"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black"
            android:hint="Email"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_email_white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/emailEt"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:id="@+id/PasswordTil"
            style="@style/CustomTextInputLayout"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black"
            app:passwordToggleTint="@color/black"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:startIconDrawable="@drawable/ic_lock_white"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/passwordEt"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PasswordTil"
            android:id="@+id/ConfirmPasswordTil"
            style="@style/CustomTextInputLayout"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:startIconTint="@color/black"
            app:passwordToggleTint="@color/black"
            android:hint="Confirm Password"
            app:startIconDrawable="@drawable/ic_lock_white"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/ConfirmpasswordEt"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_marginTop="7dp"
            android:layout_below="@id/ConfirmPasswordTil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAccountBtn"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/already_have_account"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            app:cornerRadius="8dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:layout_below="@+id/haveAccountBtn"/>

    </RelativeLayout>

    </androidx.cardview.widget.CardView>



    </RelativeLayout>


